--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -166,6 +166,7 @@ php:
             - mysql
             - gd
             - tidy
+            - xml
         pear: {  }
         pecl: {  }
     ini:
