--- a/public/mysite/_config/extensions.yml
+++ b/public/mysite/_config/extensions.yml
@@ -4,3 +4,9 @@ LeftAndMain:
 SiteConfig:
   extensions:
     - CustomSiteConfig
+Member:
+  extensions:
+    - MemberExtension
+Group:
+  extensions:
+    - GroupExtension
